add sorting, issue with sort order though

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -8,6 +8,12 @@ span.pending {
   }
 }
 
+form.sort {
+  display: flex;
+  align-items: center;
+  gap: $sp-3;
+}
+
 
 .plugin-grid {
   display: grid;
